--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hitung Keliling dan Luas Persegi</title>
+  <title>Hitung Bangun Geometri</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -34,29 +34,60 @@
       margin-top: 20px;
       font-size: 18px;
     }
+
+    .section {
+      margin-bottom: 40px;
+    }
   </style>
 </head>
 
 <body>
-  <h1>Hitung Keliling dan Luas Persegi</h1>
-  <p>Masukkan panjang sisi persegi:</p>
-  <input type="number" id="sisi" placeholder="Panjang sisi" />
-  <br>
-  <button onclick="hitung()">Hitung</button>
-  <div class="result" id="result"></div>
+  <h1>Hitung Bangun Geometri</h1>
+
+  <!-- Kalkulator Persegi -->
+  <div class="section">
+    <h2>Hitung Keliling dan Luas Persegi</h2>
+    <p>Masukkan panjang sisi persegi:</p>
+    <input type="number" id="sisi" placeholder="Panjang sisi" />
+    <br>
+    <button onclick="hitungPersegi()">Hitung Persegi</button>
+    <div class="result" id="result-persegi"></div>
+  </div>
+
+  <!-- Kalkulator Lingkaran -->
+  <div class="section">
+    <h2>Hitung Luas Lingkaran</h2>
+    <p>Masukkan jari-jari lingkaran:</p>
+    <input type="number" id="jariJari" placeholder="Jari-jari lingkaran" />
+    <br>
+    <button onclick="hitungLingkaran()">Hitung Lingkaran</button>
+    <div class="result" id="result-lingkaran"></div>
+  </div>
 
   <script>
-    function hitung() {
+    function hitungPersegi() {
       const sisi = parseFloat(document.getElementById("sisi").value);
       if (isNaN(sisi) || sisi <= 0) {
-        document.getElementById("result").innerHTML = "<p style='color: red;'>Masukkan nilai sisi yang valid!</p>";
+        document.getElementById("result-persegi").innerHTML = "<p style='color: red;'>Masukkan nilai sisi yang valid!</p>";
         return;
       }
       const keliling = 4 * sisi;
       const luas = sisi * sisi;
-      document.getElementById("result").innerHTML = `
+      document.getElementById("result-persegi").innerHTML = `
                 <p>Keliling: ${keliling} satuan</p>
                 <p>Luas: ${luas} satuan persegi</p>
+            `;
+    }
+
+    function hitungLingkaran() {
+      const jariJari = parseFloat(document.getElementById("jariJari").value);
+      if (isNaN(jariJari) || jariJari <= 0) {
+        document.getElementById("result-lingkaran").innerHTML = "<p style='color: red;'>Masukkan nilai jari-jari yang valid!</p>";
+        return;
+      }
+      const luas = Math.PI * Math.pow(jariJari, 2);
+      document.getElementById("result-lingkaran").innerHTML = `
+                <p>Luas: ${luas.toFixed(2)} satuan persegi</p>
             `;
     }
   </script>
